--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {},
   "dependencies": {
     "cheerio": "^0.22.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.3"
   }
 }
